# npnp

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md
obj_probe/: hx 3x6x2.5a-2.5n.mtl
scripts/: ecap_component_naming.md  jlcpcb_basic_0402_capacitor_lcsc_ids.txt  jlcpcb_basic_0402_resistor_lcsc_ids_v2.txt  jlcpcb_basic_0603_capacitor_lcsc_ids.txt  jlcpcb_basic_0603_resistor_lcsc_ids.txt  jlcpcb_basic_0805_capacitor_lcsc_ids.txt  jlcpcb_basic_0805_resistor_lcsc_ids.txt  merge-altium-merged-lib.ps1
src/: app.rs  batch.rs  cli.rs  component.rs  footprint.rs  lib.rs  merge.rs  passive_naming.rs  pcblib.rs  schlib.rs  schlib_common.rs  template.rs  util.rs  workflow.rs
src/lcsc/: api.rs  mod.rs  models.rs
src/schlib/: builder.rs  common.rs  mod.rs  params.rs
tests/: export_regression.rs
