[package]
name = "npnp"
version = "1.0.0"
edition = "2024"
autobins = false
authors = ["linkyourbin"]
description = "Normalize Pin Net Pad (npnp): pure Rust LCEDA/EasyEDA downloader and Altium library exporter"
readme = "README.md"
license = "PolyForm-Noncommercial-1.0.0"
repository = "https://github.com/linkyourbin/npnp"
documentation = "https://docs.rs/npnp"
keywords = ["altium", "easyeda", "lcsc", "electronics", "eda"]
categories = ["command-line-utilities"]
include = [
    "Cargo.lock",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "assets/**",
    "imgs/**",
    "src/**",
    "tests/**",
]

[lib]
name = "npnp"
path = "src/lib.rs"

[[bin]]
name = "npnp"
path = "src/main.rs"

[dependencies]
encoding_rs = "0.8.35"
cfb = "0.14.0"
clap = { version = "4.6.0", features = ["derive"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
